--- a/demo/paper-table/index.html
+++ b/demo/paper-table/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--<base href="/" target="_blank">-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <style>
@@ -10,13 +9,20 @@
             height: 100%;
             display:flex;
             margin: 0;
+            font-family: Roboto, sans-serif;
+            font-size: 16px;
+            /*color: white;*/
+        }
+        table-demo{
+            width: 100%;
+            height: 100%;
         }
     </style>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto:400,300,300italic,400italic,500,500italic,700,700italic" crossorigin="anonymous">
-    <script type="module" src="/elements/iron-icon/iron-icon.js"></script>
-    <script type="module" src="demo-icons.js"></script>
+    <script type="module" src="table-demo.js"></script>
+    <script src="/elements/cbn-utils/CbnUtils.js"></script>
 </head>
 <body>
-<iron-icon icon="demo"></iron-icon>
+    <table-demo></table-demo>
 </body>
 </html>
