--- a/demo/paper-table/index.html
+++ b/demo/paper-table/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <style>
+        :root{
+            --teal-color: #1ac6b4;
+            --green-color: #0b8043;
+            --red-color: #d32f2f;
+            --blue-color: #1976d2;
+            --yellow-color: #f57c00;
+            --grey-color:#616161;
+            font-family: Roboto, sans-serif;
+            font-size: 16px;
+        }
         html,body{
             width: 100%;
             height: 100%;
