initial version of lit3

--- a/demo/demo-ace-editor/demo-ace.html
+++ b/demo/demo-ace-editor/demo-ace.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <base href="/" >
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <style>
         :root{
@@ -29,7 +28,7 @@
             height: 100%;
         }
     </style>
-    <script type="module" src="/demo/ace-editor/index.js"></script>
+    <script type="module" src="demo-ace.js"></script>
 </head>
 <body>
 <ace-editor-demo></ace-editor-demo>
