--- a/demo/demo-form-editor/demo-form-editor.html
+++ b/demo/demo-form-editor/demo-form-editor.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <base href="/" >
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <style>
         :root{
@@ -29,8 +28,7 @@
             height: 100%;
         }
     </style>
-    <script type="module" src="/demo/form-editor/index.js"></script>
-    <script src="/elements/cbn-utils/CbnUtils.js"></script>
+    <script type="module" src="demo-form-editor.js"></script>
     <script>
         data = {
             _configs: {
