--- a/demo/demo-paper-table/demo-paper-table.html
+++ b/demo/demo-paper-table/demo-paper-table.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <style>
+        :root{
+            --teal-color: #1ac6b4;
+            --green-color: #0b8043;
+            --red-color: #d32f2f;
+            --blue-color: #1976d2;
+            --yellow-color: #f57c00;
+            --grey-color:#616161;
+            font-family: Roboto, sans-serif;
+            font-size: 16px;
+        }
         html,body{
             width: 100%;
             height: 100%;
@@ -18,13 +28,9 @@
             height: 100%;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto:400,300,300italic,400italic,500,500italic,700,700italic" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/node_modules/tiny-date-picker/tiny-date-picker.css">
-    <script type="module" src="iron-form-demo.js"></script>
-    <script src="/elements/cbn-utils/CbnUtils.js"></script>
-
+    <script type="module" src="demo-paper-table.js"></script>
 </head>
 <body>
-    <iron-form-demo></iron-form-demo>
+    <table-demo></table-demo>
 </body>
 </html>
