fix demo iron form

--- a/demo/demo-iron-form/demo-iron-form.html
+++ b/demo/demo-iron-form/demo-iron-form.html
@@ -18,7 +18,7 @@
             height: 100%;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="/node_modules/tiny-date-picker/tiny-date-picker.css">
+    <link rel="stylesheet" type="text/css" href="../../node_modules/tiny-date-picker/tiny-date-picker.css">
     <script type="module" src="demo-iron-form.js"></script>
 
 </head>
