--- a/demo/demo-iron-form/demo-iron-form.html
+++ b/demo/demo-iron-form/demo-iron-form.html
@@ -10,12 +10,30 @@
             display:flex;
             margin: 0;
             font-family: Roboto, sans-serif;
-            font-size: 16px;
-            /*color: white;*/
         }
-        table-demo{
-            width: 100%;
-            height: 100%;
+        body{
+            --app-primary-color: white;
+            --menu-color: black;
+            --group-section-color: white;
+            --group-section-background-color: var(--blue-color);
+            --selected-menu-background-color: #D1D1D1;
+            --selected-menu-border-color: #1a3d6b;
+            --selected-menu-color: var(--blue-color);
+            --border-menu-color: #cecece;
+            --background-menu-color: #f0f0f0;
+            --teal-color: #00bfa5;
+            --green-color: #0b8043;
+            --red-color: #c53929;
+            --blue-color: #1a3d6b;
+            --yellow-color: #f09300;
+            --grey-color: #616161;
+            --logo-width: 140px;
+            --app-secondary-color: #5aa056;
+            --highlight-color: var(--blue-color);
+            --paper-table-row-hover-bg: rgba(128, 128, 128, 0.5);
+            --paper-table-row-hover-color: black;
+            --paper-table-row-selected-bg: rgba(128, 128, 128, 0.5);
+            --paper-table-row-selected-color: black;
         }
     </style>
     <link rel="stylesheet" type="text/css" href="../../node_modules/tiny-date-picker/tiny-date-picker.css">
