--- a/demo/demo-iron-app/demo-iron-app.html
+++ b/demo/demo-iron-app/demo-iron-app.html
@@ -22,36 +22,16 @@
             margin: 0;
             font-family: Roboto, sans-serif;
             font-size: 16px;
-            /*color: white;*/
         }
 
-        form-editor-demo {
+        table-demo {
             width: 100%;
             height: 100%;
         }
     </style>
-    <script type="module" src="./demo-form-editor.js"></script>
-    <script>
-        data = {
-            _configs: {
-                form: {
-                    "elements": [{
-                        "label": "Collection",
-                        "type": "select",
-                        "name": "collection",
-                        "options": ["document", "report", "form"],
-                        "required": true,
-                        "multiple": false,
-                        "freeText": true,
-                        "class": "col-xs-12 col-sm-12 col-lg-12",
-                        "dbType": "string"
-                    }]
-                }
-            }
-        }
-    </script>
+    <script type="module" src="demo-iron-app.js"></script>
 </head>
 <body>
-<form-editor-demo></form-editor-demo>
+<iron-app-demo></iron-app-demo>
 </body>
 </html>
