--- a/demo/demo-multi-form/demo-multi-form.html
+++ b/demo/demo-multi-form/demo-multi-form.html
@@ -25,33 +25,14 @@
             /*color: white;*/
         }
 
-        form-editor-demo {
+        table-demo {
             width: 100%;
             height: 100%;
         }
     </style>
-    <script type="module" src="./demo-form-editor.js"></script>
-    <script>
-        data = {
-            _configs: {
-                form: {
-                    "elements": [{
-                        "label": "Collection",
-                        "type": "select",
-                        "name": "collection",
-                        "options": ["document", "report", "form"],
-                        "required": true,
-                        "multiple": false,
-                        "freeText": true,
-                        "class": "col-xs-12 col-sm-12 col-lg-12",
-                        "dbType": "string"
-                    }]
-                }
-            }
-        }
-    </script>
+    <script type="module" src="demo-multi-form.js"></script>
 </head>
 <body>
-<form-editor-demo></form-editor-demo>
+<multi-form-demo></multi-form-demo>
 </body>
 </html>
