--- a/demo/demo-paper-table/demo-paper-table.html
+++ b/demo/demo-paper-table/demo-paper-table.html
@@ -28,6 +28,7 @@
             height: 100%;
         }
     </style>
+    <title>Lit Tutorials</title>
     <script type="module" src="demo-paper-table.js"></script>
 </head>
 <body>
