highlight with green when the dropzone is hovered.

--- a/demo/demo-iron-form/demo-iron-form.html
+++ b/demo/demo-iron-form/demo-iron-form.html
@@ -40,7 +40,7 @@
     <script type="module" src="demo-iron-form.js"></script>
 
 </head>
-<body>
+<body ondrop="event.preventDefault()" ondragover="event.preventDefault()">
     <iron-form-demo></iron-form-demo>
 </body>
 </html>
