--- a/demo/demo-paper-table/demo-paper-table.html
+++ b/demo/demo-paper-table/demo-paper-table.html
@@ -21,7 +21,7 @@
             margin: 0;
             font-family: Roboto, sans-serif;
             font-size: 16px;
-            /*color: white;*/
+            background-color: lightgray;
         }
         table-demo{
             width: 100%;
